fix popover z-index issue

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -216,7 +216,7 @@
 
 	[popover] {
 		position: fixed;
-		z-index: 2147483647;
+		z-index: 10;
 		inset: 0;
 		padding: 0.25em;
 		width: fit-content;
